--- a/ShareHome/Base.lproj/Main.storyboard
+++ b/ShareHome/Base.lproj/Main.storyboard
@@ -117,7 +117,7 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleAspectFill" bounces="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="70" sectionHeaderHeight="28" sectionFooterHeight="28" id="xA7-vc-uAg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.1138334795832634" green="0.10993852466344833" blue="0.10155775398015976" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -149,8 +149,9 @@
                                             </attributedString>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home.png" translatesAutoresizingMaskIntoConstraints="NO" id="EDc-lY-2Cp">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Home" translatesAutoresizingMaskIntoConstraints="NO" id="EDc-lY-2Cp">
                                             <rect key="frame" x="43" y="4" width="45" height="47"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="45" id="8LH-Rw-BP4"/>
                                             </constraints>
@@ -176,8 +177,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="human.png" translatesAutoresizingMaskIntoConstraints="NO" id="zae-lX-hGl">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Profile" translatesAutoresizingMaskIntoConstraints="NO" id="zae-lX-hGl">
                                             <rect key="frame" x="46" y="0.0" width="38" height="50.5"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="38" id="0Gd-t2-m8b"/>
                                             </constraints>
@@ -192,7 +194,7 @@
                                                     </attributes>
                                                 </fragment>
                                             </attributedString>
-                                            <nil key="highlightedColor"/>
+                                            <color key="highlightedColor" red="0.73335647583007812" green="0.72944235801696777" blue="0.72927695512771606" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </label>
                                     </subviews>
                                     <constraints>
@@ -215,8 +217,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="message.png" translatesAutoresizingMaskIntoConstraints="NO" id="ckS-L0-bie">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Make a Post" translatesAutoresizingMaskIntoConstraints="NO" id="ckS-L0-bie">
                                             <rect key="frame" x="46" y="0.0" width="38" height="50.5"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="38" id="cpj-G0-LOp"/>
                                             </constraints>
@@ -254,8 +257,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar.png" translatesAutoresizingMaskIntoConstraints="NO" id="gOQ-mg-do7">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Schedule" translatesAutoresizingMaskIntoConstraints="NO" id="gOQ-mg-do7">
                                             <rect key="frame" x="46" y="0.0" width="38" height="50.5"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="38" id="tKU-zW-IO8"/>
                                             </constraints>
@@ -293,8 +297,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="groceryList.png" translatesAutoresizingMaskIntoConstraints="NO" id="crC-Ja-X1h">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Grocery List" translatesAutoresizingMaskIntoConstraints="NO" id="crC-Ja-X1h">
                                             <rect key="frame" x="46" y="0.0" width="38" height="50.5"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="38" id="MAO-sr-KQE"/>
                                             </constraints>
@@ -335,8 +340,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="55"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="transactions.png" translatesAutoresizingMaskIntoConstraints="NO" id="9CO-MX-k4K">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Transactions" translatesAutoresizingMaskIntoConstraints="NO" id="9CO-MX-k4K">
                                             <rect key="frame" x="46" y="0.0" width="38" height="50.5"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="38" id="AXR-hI-g6m"/>
                                             </constraints>
@@ -374,11 +380,12 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="201"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logout6.png" translatesAutoresizingMaskIntoConstraints="NO" id="iXq-Y2-ruG">
-                                            <rect key="frame" x="37" y="0.0" width="55" height="55"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Shape" translatesAutoresizingMaskIntoConstraints="NO" id="iXq-Y2-ruG">
+                                            <rect key="frame" x="46" y="0.0" width="38" height="50.5"/>
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="55" id="9VO-BA-GCs"/>
-                                                <constraint firstAttribute="height" constant="55" id="ed5-zT-LzZ"/>
+                                                <constraint firstAttribute="width" constant="38" id="9VO-BA-GCs"/>
+                                                <constraint firstAttribute="height" constant="50.5" id="ed5-zT-LzZ"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ta-Re-Hkv">
@@ -396,9 +403,9 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="8Ta-Re-Hkv" firstAttribute="top" secondItem="bdR-v4-Hdu" secondAttribute="topMargin" constant="9.5" id="83S-Bb-gGC"/>
-                                        <constraint firstItem="iXq-Y2-ruG" firstAttribute="leading" secondItem="bdR-v4-Hdu" secondAttribute="leadingMargin" constant="29" id="C4K-wk-J6F"/>
+                                        <constraint firstItem="iXq-Y2-ruG" firstAttribute="leading" secondItem="bdR-v4-Hdu" secondAttribute="leadingMargin" constant="38" id="C4K-wk-J6F"/>
                                         <constraint firstItem="iXq-Y2-ruG" firstAttribute="top" secondItem="bdR-v4-Hdu" secondAttribute="top" id="jzh-hT-K5T"/>
-                                        <constraint firstItem="8Ta-Re-Hkv" firstAttribute="leading" secondItem="iXq-Y2-ruG" secondAttribute="trailing" constant="4" id="teZ-6r-5cm"/>
+                                        <constraint firstItem="8Ta-Re-Hkv" firstAttribute="leading" secondItem="iXq-Y2-ruG" secondAttribute="trailing" constant="12" id="teZ-6r-5cm"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -737,33 +744,6 @@
             </objects>
             <point key="canvasLocation" x="1462" y="862"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="N9r-eA-UhD">
-            <objects>
-                <viewController id="kHi-HV-kOO" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Pia-qg-shh"/>
-                        <viewControllerLayoutGuide type="bottom" id="0YA-n9-V8E"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="fkA-uh-INz">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Detail View of Schedule Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MLc-VX-IBQ">
-                                <rect key="frame" x="73" y="267" width="228" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cA1-RF-fA9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1462" y="1623"/>
-        </scene>
         <!--Schedule-->
         <scene sceneID="95C-1l-EH2">
             <objects>
@@ -934,15 +914,15 @@
         </scene>
     </scenes>
     <resources>
-        <image name="calendar.png" width="512" height="512"/>
-        <image name="groceryList.png" width="200" height="200"/>
-        <image name="home.png" width="512" height="512"/>
-        <image name="human.png" width="512" height="512"/>
+        <image name="Grocery List" width="44" height="44"/>
+        <image name="Home" width="44" height="44"/>
+        <image name="Make a Post" width="44" height="44"/>
+        <image name="Profile" width="44" height="44"/>
+        <image name="Schedule" width="44" height="44"/>
+        <image name="Shape" width="35" height="44"/>
+        <image name="Transactions" width="44" height="44"/>
         <image name="livingRoom.jpg" width="736" height="981"/>
-        <image name="logout6.png" width="200" height="200"/>
-        <image name="message.png" width="128" height="128"/>
         <image name="placeholder.png" width="270" height="170"/>
-        <image name="transactions.png" width="300" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="AG9-k5-IaF"/>
